--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "jsdoc": "jsdoc -c jsdoc.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./src/test/test.js"
   },
   "types": "./typings/index.d.ts",
   "directories": {
