--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/zeroclutch/f1-fantasy-api.git"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
   }
 }
