--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "node ./src/test/test.js"
   },
   "types": "./typings/index.d.ts",
+  "files": [
+    "src"
+  ],
   "directories": {
     "lib": "src",
     "test": "test"
