--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "jsdoc": "jsdoc -c jsdoc.json",
-    "test": "node ./src/test/test.js"
+    "test": "node ./src/test/index.js"
   },
   "types": "./typings/index.d.ts",
   "files": [
